feat: permitir reserva de ate dois presentes
